fixed dark mode

--- a/styles.css
+++ b/styles.css
@@ -488,3 +488,6 @@ input {
     }
 
 }
+body.dark-mode main .feature .answer {
+    color: black ;
+}
